--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "react": "^18.3.1",
+    "react-countdown": "^2.3.6",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-otp-input": "^3.1.1",
+    "react-password-checklist": "^1.8.0",
+    "react-phone-number-input": "^3.4.8",
     "react-router-dom": "^6.26.2",
     "swr": "^2.2.5"
   },
