--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-countdown": "^2.3.6",
     "react-dom": "^18.3.1",
@@ -18,6 +20,7 @@
     "react-password-checklist": "^1.8.0",
     "react-phone-number-input": "^3.4.8",
     "react-router-dom": "^6.26.2",
+    "react-toastify": "^10.0.5",
     "swr": "^2.2.5"
   },
   "devDependencies": {
